tests/purs/failing/DeriveClauseNewtypeOverlap.out
Error found:
in module [33mMain[0m
at tests/purs/failing/DeriveClauseNewtypeOverlap.purs:10:1 - 10:34 (line 10, column 1 - line 10, column 34)

  Overlapping type class instances found for
  [33m                              [0m
  [33m  Data.Newtype.Newtype Wrapper[0m
  [33m                       String [0m
  [33m                              [0m
  The following instances were found:

    instance in module [33mMain[0m with type [33mNewtype Wrapper String[0m (line 8, column 11 - line 8, column 18)
    instance in module [33mMain[0m with type [33mNewtype Wrapper String[0m (line 10, column 1 - line 10, column 34)


in type class instance
[33m                              [0m
[33m  Data.Newtype.Newtype Wrapper[0m
[33m                       String [0m
[33m                              [0m

See https://github.com/purescript/documentation/blob/master/errors/OverlappingInstances.md for more information,
or to contribute content related to this error.

